# RealTimeCurrencyConverter

./: CMakeLists.txt  README.md  TauxDechange.cpp  TauxDechange.sln  TauxDechange.vcxproj  TauxDechange.vcxproj.filters
TauxDechange/x64/Debug/: TauxDechange.exe.recipe  TauxDechange.ilk  vc143.idb
TauxDechange/x64/Debug/TauxDechange.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  TauxDechange.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
